# dimensionHeadTracking

./: CMakeLists.txt  README.md  Server.cpp  Server.h  TrackingBox.cpp  TrackingBox.h  main.cpp  server.cpp  server.h  websocket.html
calib_data/011144345047/: calib_ir.yaml
calib_data/500792543142/: calib_color.yaml  calib_ir.yaml  calib_pose.yaml
calib_data/502212243142/: calib_color.yaml  calib_pose.yaml
